--- a/week4/coqauvin/css/main.css
+++ b/week4/coqauvin/css/main.css
@@ -133,6 +133,7 @@ body {
 	margin: 0;
 	color: #fff;
 	border-top-right-radius: 5px;
+	font-size: 200%;
 }
 
 .recipe-meta h2, .recipe-meta h3, .recipe-meta p {
@@ -151,6 +152,13 @@ body {
 	padding: 20px;
 	border-top: 5px solid #f3f3f3;
 }
+
+.aside{
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-bottom: 20px;
+}
+
 
 /* ul, ol {
 	margin: 0 0 10px 0;
