--- a/final/sass/components/_footer.scss
+++ b/final/sass/components/_footer.scss
@@ -6,5 +6,25 @@
 	p {
 	color:#FFF;
 	font-family: 'Slabo 27px', serif;
+}
+	#address {
+	float: left;
+	padding-top: .85em;
+	text-align: left;
+    display: block;
+	color:#FFF;
+	font-family: 'Slabo 27px', serif;
+	}
+	#contact-info {
+	float: right;
+	padding-top: .85em;
+	text-align: right;
+    display: block;
+	color:#FFF;
+	font-family: 'Slabo 27px', serif;
+	}
+	a {
+		text-decoration: underline;
+		color:#FFF;
 	}
 }
