--- a/final/sass/components/_law.scss
+++ b/final/sass/components/_law.scss
@@ -1,8 +1,23 @@
 @import "compass/css3/opacity";
 
+#lawborder {
+	height: 50px;
+	margin-bottom: 500px;
+}
+
+    
 #law {
 	background-color:#ebebeb;
 	width: 100%;
+	height: 100%;
+	h3 {
+		text-align:center;
+		font-family: 'Slabo 27px', serif;
+		font-size: 3em;
+		top: 20%;
+		position: relative;	}
+	figure {
+	}
 	img {
 		width: 100%;
 		padding: 0;
@@ -10,7 +25,7 @@
 	}
 	figcaption {
 	background-color: rgba(0,0,0,.9);
-	opacity: 100;
+	opacity: 0;
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -21,9 +36,12 @@
 	transition: opacity .5s linear;
 	text-shadow: #000 1px 1px 0;
 	text-align: left;
-	padding: 4em 2em;
 	text-size: 12px;
 	color: #fff;
 	font-size: 16px;
+	&:hover {
+		display: block;
+		opacity: 1.0;
+	}
 	}
 }
