--- a/final/css/application.css
+++ b/final/css/application.css
@@ -43,16 +43,15 @@
 }
 /* line 17, ../sass/components/_attorneys.scss */
 #attorneys img {
-  margin: 0;
+  align: center;
   padding: 0;
-  width: 100%;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
   opacity: 0.7;
   -webkit-transition: opacity 1s;
   /* For Safari 3.1 to 6.0 */
   transition: opacity 1s;
 }
-/* line 25, ../sass/components/_attorneys.scss */
+/* line 24, ../sass/components/_attorneys.scss */
 #attorneys img:hover {
   -webkit-transition: opacity 1s;
   /* For Safari 3.1 to 6.0 */
@@ -60,7 +59,7 @@
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-/* line 30, ../sass/components/_attorneys.scss */
+/* line 29, ../sass/components/_attorneys.scss */
 #attorneys div {
   margin: 0;
   padding: 0;
@@ -131,11 +130,11 @@
 }
 
 /* line 18, ../sass/components/_header.scss */
-#circle {
+.circle {
   padding-top: 2em;
 }
 /* line 20, ../sass/components/_header.scss */
-#circle img {
+.circle img {
   width: 200px;
   height: 200px;
   border-radius: 50%;
@@ -205,14 +204,20 @@ h3 {
   top: 20%;
   position: relative;
 }
-/* line 21, ../sass/components/_law.scss */
+/* line 20, ../sass/components/_law.scss */
 #law img {
   width: 100%;
   padding: 0;
   margin: 0;
 }
-/* line 26, ../sass/components/_law.scss */
-#law figcaption {
+/* line 25, ../sass/components/_law.scss */
+#law figure {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+/* line 30, ../sass/components/_law.scss */
+#law .fc {
   background-color: rgba(0, 0, 0, 0.9);
   opacity: 0;
   position: absolute;
@@ -229,8 +234,8 @@ h3 {
   color: #fff;
   font-size: 16px;
 }
-/* line 42, ../sass/components/_law.scss */
-#law figcaption:hover {
+/* line 46, ../sass/components/_law.scss */
+#law .fc:hover {
   display: block;
   opacity: 1.0;
 }
