--- a/final/sass/components/_attorneys.scss
+++ b/final/sass/components/_attorneys.scss
@@ -15,9 +15,8 @@
 
 	}
 	img {
-		margin:0;
+		align:center;
 		padding:0;
-		width: 100%;
 		@include opacity(.7);
 	    -webkit-transition: opacity 1s; /* For Safari 3.1 to 6.0 */
 	    transition: opacity 1s;
