--- a/final/sass/components/_law.scss
+++ b/final/sass/components/_law.scss
@@ -16,14 +16,18 @@
 		font-size: 3em;
 		top: 20%;
 		position: relative;	}
-	figure {
-	}
+
 	img {
 		width: 100%;
 		padding: 0;
 		margin: 0;
 	}
-	figcaption {
+	figure {
+		width: 100%;
+		padding: 0;
+		margin: 0;
+	}
+	.fc {
 	background-color: rgba(0,0,0,.9);
 	opacity: 0;
 	position: absolute;
