--- a/final/sass/components/_about.scss
+++ b/final/sass/components/_about.scss
@@ -4,7 +4,9 @@
 #about {
 	background-color: #d7d7d7;
 	div {
-		padding: 50px;		
+		padding-left: 2em;
+		padding-right: 2em;
+		padding-bottom: 2em;
 	}
 	img.aboutimage {
 		width: 100%;
