--- a/final/css/application.css
+++ b/final/css/application.css
@@ -5,19 +5,21 @@
 }
 /* line 6, ../sass/components/_about.scss */
 #about div {
-  padding: 50px;
+  padding-left: 2em;
+  padding-right: 2em;
+  padding-bottom: 2em;
 }
-/* line 9, ../sass/components/_about.scss */
+/* line 11, ../sass/components/_about.scss */
 #about img.aboutimage {
   width: 100%;
 }
-/* line 12, ../sass/components/_about.scss */
+/* line 14, ../sass/components/_about.scss */
 #about ul {
   list-style-image: none;
   list-style-type: none;
   margin-left: 0;
 }
-/* line 15, ../sass/components/_about.scss */
+/* line 17, ../sass/components/_about.scss */
 #about img.smedia {
   width: 5em;
 }
@@ -70,6 +72,58 @@
   background-color: #ebebeb;
   width: 100%;
   padding-bottom: 1em;
+}
+/* line 5, ../sass/components/_contact.scss */
+#contact b {
+  font-family: 'Slabo 27px', serif;
+  color: #840137;
+  font-weight: normal;
+  font-size: 1.25em;
+}
+/* line 11, ../sass/components/_contact.scss */
+#contact div {
+  padding-left: 2em;
+  padding-right: 2em;
+  padding-bottom: 2em;
+}
+/* line 16, ../sass/components/_contact.scss */
+#contact form {
+  font-family: 'Slabo 27px', serif;
+  color: #840137;
+  font-size: 1.25em;
+}
+/* line 21, ../sass/components/_contact.scss */
+#contact #cf_name {
+  width: 100%;
+  margin-bottom: .5em;
+}
+/* line 25, ../sass/components/_contact.scss */
+#contact #cf_email {
+  width: 100%;
+  margin-bottom: .5em;
+}
+/* line 29, ../sass/components/_contact.scss */
+#contact #cf_message {
+  width: 100%;
+  height: 5em;
+}
+/* line 33, ../sass/components/_contact.scss */
+#contact #send {
+  background-color: #840137;
+  margin: .5em .5em .5em 0;
+  padding: 0 1.25em 0 1.25em;
+  color: #FFF;
+  font-family: 'Slabo 27px', serif;
+  font-size: 90%;
+}
+/* line 41, ../sass/components/_contact.scss */
+#contact #clear {
+  background-color: #840137;
+  margin: .5em .5em .5em 0;
+  padding: 0 1.25em 0 1.25em;
+  color: #FFF;
+  font-family: 'Slabo 27px', serif;
+  font-size: 90%;
 }
 
 /* line 1, ../sass/components/_footer.scss */
@@ -144,59 +198,88 @@
   margin-top: 2em;
 }
 
-/* line 2, ../sass/components/_home.scss */
+@media only screen and (max-width: 1135px) and (min-width: 651px) {
+  /* line 3, ../sass/components/_home.scss */
+  #home #text {
+    padding: 6em;
+  }
+}
+@media only screen and (max-width: 650px) and (min-width: 481px) {
+  /* line 11, ../sass/components/_home.scss */
+  #home #text {
+    padding: 4em;
+  }
+}
+@media only screen and (max-width: 480px) {
+  /* line 20, ../sass/components/_home.scss */
+  #home #text {
+    padding: 4em;
+  }
+}
+/* line 26, ../sass/components/_home.scss */
 #home {
   background-color: #ebebeb;
   width: 100%;
 }
-/* line 5, ../sass/components/_home.scss */
+/* line 29, ../sass/components/_home.scss */
 #home img {
   width: 100%;
   padding: 4em;
 }
-/* line 9, ../sass/components/_home.scss */
+/* line 33, ../sass/components/_home.scss */
 #home #text {
   padding-right: 6em;
   padding-top: 6em;
 }
 
-/* line 14, ../sass/components/_home.scss */
+/* line 38, ../sass/components/_home.scss */
 p {
   font-family: sans-serif;
   font-size: 1.1em;
 }
 
-/* line 19, ../sass/components/_home.scss */
+/* line 43, ../sass/components/_home.scss */
 h1 {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 3.5em;
+  font-family: 'BaskSBI', serif;
   padding-left: 2em;
+  padding-top: 2em;
 }
 
-/* line 25, ../sass/components/_home.scss */
+/* line 49, ../sass/components/_home.scss */
 h2 {
   font-family: 'Slabo 27px', serif;
 }
 
-/* line 29, ../sass/components/_home.scss */
+/* line 53, ../sass/components/_home.scss */
 h3 {
   font-family: 'Slabo 27px', serif;
   color: #840137;
 }
 
-/* line 3, ../sass/components/_law.scss */
+@font-face {
+  font-family: "BaskSBI";
+  src: url("../fonts/BaskSBI.ttf");
+}
+
+@media (max-width: 650px) {
+  /* line 3, ../sass/components/_law.scss */
+  #law .fc {
+    opacity: none;
+  }
+}
+/* line 11, ../sass/components/_law.scss */
 #lawborder {
   height: 50px;
   margin-bottom: 500px;
 }
 
-/* line 9, ../sass/components/_law.scss */
+/* line 17, ../sass/components/_law.scss */
 #law {
   background-color: #ebebeb;
   width: 100%;
   height: 100%;
 }
-/* line 13, ../sass/components/_law.scss */
+/* line 21, ../sass/components/_law.scss */
 #law h3 {
   text-align: center;
   font-family: 'Slabo 27px', serif;
@@ -204,19 +287,19 @@ h3 {
   top: 20%;
   position: relative;
 }
-/* line 20, ../sass/components/_law.scss */
+/* line 28, ../sass/components/_law.scss */
 #law img {
   width: 100%;
   padding: 0;
   margin: 0;
 }
-/* line 25, ../sass/components/_law.scss */
+/* line 33, ../sass/components/_law.scss */
 #law figure {
   width: 100%;
   padding: 0;
   margin: 0;
 }
-/* line 30, ../sass/components/_law.scss */
+/* line 38, ../sass/components/_law.scss */
 #law .fc {
   background-color: rgba(0, 0, 0, 0.9);
   opacity: 0;
@@ -234,7 +317,7 @@ h3 {
   color: #fff;
   font-size: 16px;
 }
-/* line 46, ../sass/components/_law.scss */
+/* line 54, ../sass/components/_law.scss */
 #law .fc:hover {
   display: block;
   opacity: 1.0;
@@ -250,23 +333,72 @@ h3 {
   width: 100%;
 }
 
-/* line 1, ../sass/components/_navigation.scss */
+@media only screen and (max-width: 1135px) and (min-width: 651px) {
+  /* line 3, ../sass/components/_navigation.scss */
+  .nav li {
+    align: center;
+    text-align: center;
+    display: inline;
+    float: center;
+  }
+  /* line 9, ../sass/components/_navigation.scss */
+  .nav li a {
+    align: right;
+    text-align: right;
+    display: inline;
+    float: center;
+    margin-left: 2em;
+  }
+  /* line 16, ../sass/components/_navigation.scss */
+  .nav li:first-child {
+    width: 100%;
+  }
+  /* line 19, ../sass/components/_navigation.scss */
+  .nav li:last-child {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 650px) and (min-width: 481px) {
+  /* line 28, ../sass/components/_navigation.scss */
+  .nav li {
+    width: 100%;
+    align: center;
+    text-align: center;
+  }
+  /* line 32, ../sass/components/_navigation.scss */
+  .nav li a {
+    font-size: 2em;
+  }
+}
+@media only screen and (max-width: 480px) {
+  /* line 41, ../sass/components/_navigation.scss */
+  .nav li {
+    width: 100%;
+    align: center;
+    text-align: center;
+  }
+  /* line 45, ../sass/components/_navigation.scss */
+  .nav li a {
+    font-size: 1.5em;
+  }
+}
+/* line 52, ../sass/components/_navigation.scss */
 #navigation {
   width: 100%;
 }
 
-/* line 7, ../sass/components/_navigation.scss */
+/* line 58, ../sass/components/_navigation.scss */
 .nav li {
   float: left;
   padding-top: .85em;
 }
-/* line 10, ../sass/components/_navigation.scss */
+/* line 61, ../sass/components/_navigation.scss */
 .nav li:first-child {
   padding-top: 0;
   padding-left: 1em;
   padding-bottom: 1em;
 }
-/* line 15, ../sass/components/_navigation.scss */
+/* line 66, ../sass/components/_navigation.scss */
 .nav li:last-child {
   display: block;
   font-size: 2em;
@@ -276,19 +408,19 @@ h3 {
   color: #363636;
   font-family: 'Montserrat', sans-serif;
 }
-/* line 23, ../sass/components/_navigation.scss */
+/* line 74, ../sass/components/_navigation.scss */
 .nav li:last-child i {
   font-size: 1em;
   color: #840137;
 }
-/* line 29, ../sass/components/_navigation.scss */
+/* line 80, ../sass/components/_navigation.scss */
 .nav a {
   display: block;
   font-size: 1.25em;
   color: #840137;
   font-family: 'Slabo 27px', serif;
 }
-/* line 35, ../sass/components/_navigation.scss */
+/* line 86, ../sass/components/_navigation.scss */
 .nav img {
   height: 4em;
 }
