--- a/final/sass/components/_contact.scss
+++ b/final/sass/components/_contact.scss
@@ -2,4 +2,48 @@
 	background-color:#ebebeb;
 	width: 100%;
 	padding-bottom: 1em;
+	b {
+		font-family: 'Slabo 27px', serif;
+		color:#840137;
+		font-weight: normal;
+		font-size: 1.25em;
+	}
+	div {
+		padding-left: 2em;
+		padding-right: 2em;
+		padding-bottom: 2em;
+	}
+	form {
+		font-family: 'Slabo 27px', serif;
+		color:#840137;
+		font-size: 1.25em;
+	}
+	#cf_name {
+		width: 100%;
+		margin-bottom: .5em;
+	}
+	#cf_email {
+		width: 100%;
+		margin-bottom: .5em;
+	}
+	#cf_message {
+		width: 100%;
+		height: 5em;
+	}
+	#send {
+		background-color: #840137;
+		margin: .5em .5em .5em 0;
+		padding: 0 1.25em 0 1.25em;
+		color:#FFF;
+		font-family: 'Slabo 27px', serif;
+		font-size: 90%;
+	}
+	#clear {
+		background-color: #840137;
+		margin: .5em .5em .5em 0;
+		padding: 0 1.25em 0 1.25em;
+		color:#FFF;
+		font-family: 'Slabo 27px', serif;
+		font-size: 90%;
+	}
 }
