--- a/final/sass/components/_navigation.scss
+++ b/final/sass/components/_navigation.scss
@@ -1,3 +1,54 @@
+@media only screen and (max-width : 1135px) and (min-width : 651px) {
+	.nav {
+		li {
+			align: center;
+			text-align: center;
+			display: inline;
+			float:center;
+			
+			a {
+				align: right;
+				text-align: right;
+				display: inline;
+				float:center;
+				margin-left:2em;				
+			}
+			&:first-child {
+				width:100%;
+			}
+			&:last-child {
+				width:100%;
+			}
+			}
+}
+}
+
+@media only screen and (max-width : 650px) and (min-width : 481px) {
+	.nav {
+		li {
+		    width: 100%;
+			align: center;
+			text-align: center;
+			a {
+				font-size:2em;
+			  }
+			}
+}
+}
+
+@media only screen and (max-width : 480px)   {
+	.nav {
+		li {
+		    width: 100%;
+			align: center;
+			text-align: center;
+			a {
+				font-size:1.5em;
+			  }
+			}
+}
+}
+
 #navigation{
 	width: 100%;
 }
